...
NSString *const kUserCanceledError = @"The user canceled the sign-in flow.";

const NSTimeInterval kMinimumRestoredAccessTokenTimeToExpire = 600.0;
NSString *const kAudienceParameter = @"audience";
NSString *const kOpenIDRealmParameter = @"openid.realm";

NSString *const kBasicProfileEmailKey = @"email";
NSString *const kBasicProfilePictureKey = @"picture";
NSString *const kBasicProfileNameKey = @"name";
NSString *const kBasicProfileGivenNameKey = @"given_name";
NSString *const kBasicProfileFamilyNameKey = @"family_name";

NSString *const kTokenURLTemplate = @"https://%@/token";
...
